# ChaCha_TestU01

./: .gitignore  CMakeLists.txt  Project Setup Script  README.md  main.c
PCG_vs_LCG/: PCG_vs_LCG.py
big_results/: detail_ChaCha8_bigcrush.txt  summary_bigcrush.txt
big_results_1/: detail_ChaCha12_bigcrush.txt  detail_ChaCha4_bigcrush.txt
big_results_2/: detail_ChaCha12_bigcrush.txt  detail_ChaCha2-Feedback_bigcrush.txt  detail_ChaCha4-Feedback_bigcrush.txt  summary_bigcrush.txt
chacha/: bad_prng.c  chacha.h  chacha12.c  chacha2_feedback.c  chacha4.c  chacha8.c  chacha_core.c
crush_result/: detail_ChaCha4-Feedback_crush.txt  detail_ChaCha4_crush.txt  detail_ChaCha8_crush.txt
crush_result_1/: detail_ChaCha12_crush.txt  summary_crush.txt
crush_results_1/: summary_crush.txt
crush_results_2/: detail_BadPRNG_crush.txt  detail_ChaCha12_crush.txt  detail_ChaCha4-Feedback_crush.txt  summary_crush.txt
include/: common.h  rng_interface.h
python/: compare.py  plotter.py
scripts/: run_all_tests.sh  run_single.sh
small/: detail_BadPRNG_smallcrush.txt  detail_ChaCha12_smallcrush.txt  detail_ChaCha4_smallcrush.txt  summary_smallcrush.txt
small_result_2/: detail_BadPRNG_smallcrush.txt  detail_ChaCha12_smallcrush.txt  detail_ChaCha4-Feedback_smallcrush.txt  detail_ChaCha4_smallcrush.txt  summary_smallcrush.txt
small_results_1/: detail_ChaCha20_smallcrush.txt  detail_ChaCha8_smallcrush.txt
small_results_2/: detail_ChaCha20_smallcrush.txt
src/: main.c
src/chacha/: chacha.h  chacha20.c  chacha4_feedback.c
src/prng/: lcg.c  pcg.c  prng.h
src/tests/: benchmark.c  runner.c  tests.h  testu01_wrapper.c
test_results/big_results_1/: detail_ChaCha2-Feedback_bigcrush.txt  detail_ChaCha20_bigcrush.txt  detail_ChaCha4-Feedback_bigcrush.txt
test_results/big_results_2/: detail_ChaCha20_bigcrush.txt  detail_ChaCha4_bigcrush.txt  detail_ChaCha8_bigcrush.txt
test_results/crush_results_1/: detail_ChaCha2-Feedback_crush.txt  detail_ChaCha20_crush.txt
test_results/crush_results_2/: detail_ChaCha2-Feedback_crush.txt  (+4 more)
(+6 files in other folders)
